[package]
name = "ou"
version = "0.1.0"
edition = "2024"
description = "Git worktree management CLI tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
globset = "0.4"
console = "0.15"
serde_json = "1"
ratatui = "0.29"
crossterm = "0.29"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
